css/main.css
#logo {
    width: 15%;
    height: 100%;
}

.navbar{
    box-shadow: 2px 2px 5px #000;
    opacity: .9;
}

.navbar .nav-item .nav-link {
    color: -#fff;
}

.main-header {
    position: relative;
    background: url(../img/background.jpg);
    background-size: cover;
    min-height: 500px;

}

.background-overlay{
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    background: rgba(48, 51, 107,.7);
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}
.btn-primary, .bg {
    background-color: rgba(48, 51, 107,.9);
}
.borde{
    border: 2px solid rgba(48, 51, 107,.9);
}
.btn-link, i{
    color: rgb(48, 51, 107);
}
.form-control , .btn {
    border-radius: 0;
}

hr{
    size: 3px;
}

.text-p{
    width: 85%;
    text-align: justify;
}

.team, footer {
    background: rgb(48, 51, 107);
}

